wp-content/themes/pentaclick/style.css
/* ... */
#header .languages .english:hover {width:24px;height:24px; background-position:-27px -1px;}
#header .languages .english:active {width:24px;height:24px;background-position:-1px -1px;}
#header .languages .active .english {width:24px;height:24px;background-position:-1px -1px;}

#header .languages .russian {width:24px;height:24px;background-position:-53px -1px;}
#header .languages .russian:hover {width:24px;height:24px; background-position:-27px -1px;}
#header .languages .russian:active {width:24px;height:24px;background-position:-1px -1px;}
#header .languages .active .russian {width:24px;height:24px;background-position:-1px -1px;}

#header .languages .current-lang {
    color: #fff;
    font-size: 13px;
    font-family:'PT Sans';
    background: url('images/design/arrow-down.png') no-repeat scroll 96% center;
    padding-right: 35px;
}
#header .languages .current-lang.up {
    background-image: url('images/design/arrow-up.png');
}
#header .languages .popup-langs {
    position: absolute;
    top: 24px;
    right: 0;
    background-color: #999;
    display: none;
}
#header .languages .popup-langs a {
    display: block;
    padding: 2px 10px;
    color: #fff;
    font-size: 13px;
}
#header .languages .popup-langs a:hover {
    background-color: #bbb;
}


#header .socicons {margin:2px 30px 0 0;height:22px;float:right;}
#header .socicons .facebook, #header .socicons .twitter, #header .socicons .twitch, #header .socicons .skype, #header .socicons .youtube, #header .socicons .vk {background-image:url('images/design/header_socicons.png');background-repeat:no-repeat;margin: 0 8px;background-color:transparent;float:left;}
#header .socicons .facebook {width:20px;height:20px;background-position:-2px -2px;}
#header .socicons .facebook:hover {background-position:-2px -27px;}
#header .socicons .twitter {width:20px;height:16px;background-position:-32px -4px;margin-top:2px;}
#header .socicons .twitter:hover {background-position:-32px -29px;}
#header .socicons .twitch {width:21px;height:20px;background-position:-30px -55px;}
#header .socicons .twitch:hover {background-position:-30px -80px;}
#header .socicons .skype {width:20px;height:20px;background-position:-2px -53px;}
#header .socicons .skype:hover {background-position:-2px -78px;}
#header .socicons .youtube {width:20px;height:20px;background-position:-58px -2px;}
#header .socicons .youtube:hover {background-position:-58px -28px;}
#header .socicons .vk {width:20px;height:20px;background-position:-58px -54px;}
#header .socicons .vk:hover {background-position:-58px -80px;}

#navbar {background-color:transparent;background:url('images/design/navbar-bg.png') repeat-x;width:100%;height:71px;margin-top: 24px;border-bottom: 1px solid #999;}
#navbar .logo {width:201px;height:97px;margin:-16px 0 0 44px;float:left;}
#navbar .white_letter { color:#fff; }
#navbar .white_letter:hover { text-decoration:none; }
#navbar .website_name { font-size:35px;font-family:'lintelregular';line-height:14px;margin:20px 15px 0 15px;float:left;}
#navbar .website_name small { font-size:12px;color:#868686;margin-left:20px;}
#navbar .globalnav {width: 70%; float:left;min-width: 620px;}
#navbar .globalnav ul { height:70px; float: right;}
#navbar .globalnav ul .active { background-color:#2a2a2a; border-bottom: 2px solid #5c66e9;}
#navbar .globalnav ul li:hover {border-bottom: 2px solid #5c66e9;}
#navbar .globalnav ul li.external:hover {border-bottom: 2px solid #ffea3c;}

#navbar .globalnav li { white-space: nowrap; margin:0; font-family:'PT Sans', Arial, Helvetica, sans-serif;float:left;text-align:center;}
#navbar .globalnav li a { color:#fff;display: block; height:50px; padding:19px 10px 0 10px;font-size:20px;line-height:14px; }
#navbar .globalnav li a:first-letter {color:#5c66e9 !important; }
#navbar .globalnav li.external a:first-letter {color:#ffea3c !important; }
#navbar .globalnav a:hover { text-decoration:none; }
#navbar .globalnav a small {font-size:11px;color:#868686 !important;}
#navbar .globalnav a:hover small, #navbar .globalnav li:hover a small { color:#fff !important; }
#navbar .globalnav .active a small { color:#bdbcbc !important; }

.nav-hs {
    background-image:url('images/design/navbar-bg-hs.png') !important;
}
.nav-lol {
    background-image:url('images/design/navbar-bg-lol.png') !important;
}


#content {
    padding:50px 0 80px 0;
}

#home-content {
    
}
#home-content .promo {
    position: relative;
    width: 1280px;
    height: 600px;
    margin: 0 auto;
}
#home-content .promo.hs {
    background: url('images/promo-hs.png') no-repeat 100% 100%;
}
#home-content .promo.lol {
    background: url('images/promo-lol.png') no-repeat 100% 100%;
}
#home-content .promo .reg-but-holder {
    display: block;
    float: left;
    width: 520px;
    text-align: center;
    margin-top: 235px;
}
#home-content .twitch {
    display: none;
    width: 1280px;
    height: 600px;
    background-color: rgba(0, 0, 0, 0.7);
    margin: 0 auto;
}
#home-content .twitch.enabled {
    display: block;
}
#home-content .twitch #player {
    margin-left: 200px;
    margin-top: 60px;
    float: left;
    z-index: 101;
}
#home-content .twitch #chat {
    float: right;
    margin-right: 50px;
    margin-top: 60px;
}
#home-content .promo a div {
    color: #fff !important;
}

.bracket-content-wrapper {
    background-color: #444;
}
#bracket-content {
    width: 1280px;
    margin: 0 auto 0 auto;
    padding: 20px 0;
}
#challonge iframe {
    overflow-y: hidden;
}

.connect-content-wrapper {
    background-color: #222;
}
#connect-content {
    width: 1280px;
    margin: 0 auto 0 auto;
    color: #bbb;
    padding: 30px 0 60px 0;
    height: 570px;
}
.fb-like-box {
    float: left;
    position: absolute !important;
}
.twitter-timeline {
    float: right;
    padding-top: 2px;
}
.connect-insider {
    margin-left: 320px;
}
#vk_groups {
    
}

.participants-content-wrapper {
    background-color: #eee;
}
/* ... */

